2001-09-26  Kevin Ryde  <kevin@swox.se>

	* mpn/x86/pentium4/sse2/dive_1.asm: New file.
	* mpn/x86/pentium4/sse2/submul_1.asm: New file.
	* mpn/x86/pentium4/sse2/sqr_basecase.asm: New file.

	* mpn/x86/pentium/copyi.asm: New file, based on past work by Torbjorn.
	* mpn/x86/pentium/copyi.asm: New file, ditto.
	* mpn/x86/pentium/com_n.asm: Rewrite, ditto.

	* printf/snprntffuns.c (gmp_snprintf_format): Copy va_list in case
	vsnprintf trashes it.
	* printf/vasprintf.c (gmp_asprintf_format): Ditto.
	* gmp-impl.h, doprnt.c (va_copy): Move to gmp-impl.h.

	* tests/mpz/t-cmp_d.c (check_low_z_one): Patch by Torbjorn for vax
	limited float range.

2001-09-23  Torbjorn Granlund  <tege@swox.com>

	* mpn/vax/lshift.s: Change `jsob*' to `sob*'.
	* mpn/vax/rshift.s: Likewise.

2001-09-23  Kevin Ryde  <kevin@swox.se>

	* mpn/x86/pentium4/sse2/mul_basecase.asm: Some simple but real code.

	* printf/doprnt.c: Use va_copy for va_list variables, copy function
	parameter in case it's call-by-reference.

	* tune/freq.c (speed_cpu_frequency_bsd_dmesg): New function.
	(speed_cpu_frequency_table): Use it.

        * tune/many.pl (popcount, hamdist): Fix declared return value.
	(sb_divrem_mn): Remove a spurious duplicate entry.
	(CLEAN): Add tmp-$objbase.c when using that for .h files.
	(macro_speed): Give a default for .h files.
	Add ATTRIBUTE_CONST or __GMP_ATTRIBUTE_PURE as appropriate.

	* tune/speed.h (SPEED_ROUTINE_MPN_MOD_CALL,
	SPEED_ROUTINE_MPN_PREINV_MOD_1, SPEED_ROUTINE_MPN_POPCOUNT,
	SPEED_ROUTINE_MPN_HAMDIST, SPEED_ROUTINE_MPN_GCD_1N,
	SPEED_ROUTINE_MPN_GCD_1_CALL, SPEED_ROUTINE_MPZ_JACOBI): Use return
	values so gcc 3 won't discard calls to pure or const functions.
	(mpn_mod_1_div, mpn_mod_1_inv): Add __GMP_ATTRIBUTE_PURE.

2001-09-22  Torbjorn Granlund  <tege@swox.com>

	* mpn/x86/pentium4/sse2/mul_basecase.asm: New file, placeholder
	for real code, hiding the default x86 mul_basecase.asm.

2001-09-22  Kevin Ryde  <kevin@swox.se>

	* configure.in (AC_PREREQ): Bump to 2.52.